# WritingWebsite

./: .editorconfig  .gitignore  .isort.cfg  About.md  ProjectConfiguration.json  ReadMe.md  about.md  cspell.yaml  pytest.ini  readme.md
Automation/Scripts/: pyproject.toml  setup.py
Automation/Scripts/automation_scripts/: run_command.py
Automation/Scripts/automation_scripts/commands/: clean_command.py  develop_command.py  distribution_command.py  info_command.py  lint.py  lint_command.py  run_website.py  run_website_command.py  test_command.py
Automation/Scripts/automation_scripts/configuration/: automation_configuration.py  configuration_manager.py  project_configuration.py  project_metadata.py  python_development_configuration.py  workspace_environment.py
Automation/Scripts/automation_scripts/helpers/: automation_helpers.py
Automation/Setup/: asyncio_context.py  automation_helpers.py  check.py  logging_helpers.py  process_helpers.py  python_helpers.py  setup.py
Automation/Tests/automation_scripts_tests/: test_placeholder.py
Automation/Tests/automation_scripts_tests/commands/: test_lint.py  test_run_website.py
Sources/website/: pyproject.toml  setup.cfg  setup.py
Sources/website/benjaminhamon_author_website/: __init__.py  application.py  application_factory.py  run.py
Sources/website/benjaminhamon_author_website/static/: content.css  generic.css  layout.css
Sources/website/benjaminhamon_author_website/templates/: about.html  books.html  contact.html  home.html  layout.html  macros.html
Sources/website/benjaminhamon_writing_website/: __init__.py  application.py  application_factory.py  main_controller.py  web_helpers.py
Sources/website/benjaminhamon_writing_website/static/: content.css  generic.css  layout.css
Sources/website/benjaminhamon_writing_website/templates/: contact.html  error.html  home.html  layout.html
Tests/website/benjaminhamon_author_website_tests/: test_application_factory.py
Tests/website/benjaminhamon_writing_website_tests/: test_application_factory.py
