# cspell:words asyncio pylint pytest setuptools

[build-system]
requires = [ "setuptools >= 64" ]
build-backend = "setuptools.build_meta"

[project]
name = "automation-scripts"
version = "1.0.0+development"
description = "Automation scripts for the local project"
requires-python = ">= 3.9"

authors = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

maintainers = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "bhamon-development-toolkit ~= 2.0.1",
]

[project.optional-dependencies]
dev = [
    "mockito ~= 1.5.0",
    "pylint ~= 3.2.3",
    "pytest ~= 8.2.2",
    "pytest-asyncio ~= 0.23.7",
    "pytest-json ~= 0.4.0",
    "twine ~= 5.1.0",
]

[project.urls]
"Source" = "https://github.com/BenjaminHamon/AuthorWebsite"

[project.scripts]
automation = "automation_scripts.run_command:main"
