# cspell:words asyncio pylint pytest setuptools

[build-system]
requires = [ "setuptools >= 64" ]
build-backend = "setuptools.build_meta"

[project]
name = "benjaminhamon-author-website"
version = "1.4.0+development"
description = "Author website for Benjamin Hamon"
requires-python = ">= 3.9"

authors = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

maintainers = [
    { name = "Benjamin Hamon", email = "development@benjaminhamon.com" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "Flask ~= 3.0.3",
]

[project.optional-dependencies]
dev = [
    "mockito ~= 1.5.0",
    "pylint ~= 3.2.3",
    "pytest ~= 8.2.2",
    "pytest-asyncio ~= 0.23.7",
    "pytest-json ~= 0.4.0",
]

[project.urls]
"Source" = "https://github.com/BenjaminHamon/AuthorWebsite"

[tool.setuptools]
license-files = [ "../../About.md", "../../License.txt" ]

[tool.setuptools.package-data]
benjaminhamon_author_website = [
    "static/**/*.css",
    "static/**/*.jpeg",
	"static/**/*.png",
    "templates/**/*.html",
]
